# vrs

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  Dockerfile.console  Dockerfile.deepstream  Dockerfile.frontend  Dockerfile.inference  Justfile  README.md  docker-compose.hf-cache.yaml  docker-compose.hf-local.yaml  docker-compose.yaml  pyproject.toml  requirements-jetson.txt  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
baselines/eval/: README.md  report.json
charts/vrs/: Chart.yaml  values-dev.yaml  values-edge.yaml  values-k3s-gpu.yaml  values-kind.yaml  values-prod.yaml  values.yaml
charts/vrs/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  console-configmap.yaml  console-deployment.yaml  console-service.yaml  deepstream-worker-deployment.yaml  metadata-adapter-deployment.yaml  metrics-service.yaml  object-storage.yaml  redis.yaml  sample-metadata-configmap.yaml  servicemonitor.yaml  verifier-worker-deployment.yaml
clips/: README.md
configs/: default.yaml  jetson-qwen25vl7b.yaml  jetson-qwen3vl2b.yaml  local-rtsp-streams.yaml  multistream.yaml  qwen-openai-compatible.yaml  tiny.yaml  trtllm-cosmos.yaml  vllm-cosmos.yaml
configs/deepstream/: ds8-file-example.pipeline  ds8-file-preprocess-example.pipeline  pgie-yoloe-low.txt  pgie-yoloe-safety-preprocess.txt  pgie-yoloe-safety.txt  preprocess-yoloe-safety.txt  yoloe-safety-labels.txt
configs/policies/: README.md  dfire_eval.yaml  falldown_orin_smoke.yaml  safety.yaml
configs/policies/examples/: elderly_care.yaml  factory_fire_safety.yaml
console/: README.md  app.js  config.js  index.html
contracts/schemas/: candidate_alert.v1.schema.json  detection.v1.schema.json  evidence_ref.v1.schema.json  object_manifest.v1.schema.json  stream.v1.schema.json  verified_alert.v1.schema.json
docker/: console-nginx.conf  nginx.conf
docs/: 01-system-review.md  02-planning.md  02-roadmap.md  03-vss-sam3-blueprint.md  README.md  contracts.md  deepstream-worker.md  dfire-dataset.md  helm.md  improvements.md  k3s-gpu.md  kind-validation.md  local-console.md  local-web-ui.md  operations.md  runtime-matrix.md
docs/architecture/: deepstream-plugin-runtime.md  deepstream.md
docs/archive/: 01-improvements-archive.md  02-planning-archive.md  requirements-jetson-opencv-prototype.txt
docs/benchmarks/: deepstream-ds8-yoloe-validation-2026-06-30.md  dfire-yoloe26-model-refresh-2026-06-21.md  jetson-orin-qwen25vl7b-vlm-plan-2026-05-14.md  jetson-orin-qwen3vl2b-vlm-2026-05-12.md  rtx5080-vllm-cosmos-validation-2026-06-22.md  template.md
native/deepstream/: CMakeLists.txt  README.md
native/deepstream/configs/: file-source-example.pipeline
native/deepstream/src/: gst_vrsmeta.cpp  main.cpp  metadata_core.cpp  metadata_core.hpp  yoloe_parser.cpp
native/deepstream/tests/: test_metadata_core.cpp
prompts/templates/: verifier_base.md  verifier_json_output.md
scripts/: __init__.py  bench.py  compare_aligned_detector_parity.py  compare_detector_parity.py  compare_yoloe_raw_tensors.py  convert_raw_rgb_to_tensor.py  convert_trtexec_output.py  dump_yoloe_pytorch_raw.py  eval.py  eval_detector_models.py  eval_verifier_backends.py  export_python_detections.py  export_yoloe_raw_detections.py  export_yoloe_trt.py  make_fixture_runs.py  make_test_clips.py  prepare_verifier_eval_dataset.py  publish_rtsp_streams.py  run_deepstream_vrsmeta_parity.py  run_mp4.py  run_multistream.py  run_rtsp.py  setup_jetson_venv.sh  smoke_verifier_backend.py  sweep_dfire_prompts.py  sweep_dfire_thresholds.py  validate_vllm_backend.py  write_eval_baseline.py
tests/: conftest.py  test_aligned_detector_parity.py  test_api.py  test_audit.py  test_backends.py  test_calibration.py  test_console_static.py  test_constrained.py  test_contracts.py  test_control_registry.py  test_control_static_assignment.py  test_deepstream_adapter.py  test_deepstream_jsonl_bridge.py  test_deepstream_native_worker.py  test_deepstream_vrsmeta_parity_runner.py  test_deepstream_worker.py  test_detection_export.py  test_detector_backends.py  test_detector_parity.py  test_eval.py  test_failure_paths.py  test_helm_chart.py  test_make_test_clips.py  test_manifest_sink.py  test_metrics.py  test_multistream.py  test_policy_reload.py  test_privacy.py  test_scenario_policy.py  test_smoke.py  test_storage.py  test_thumbnails.py  test_tracking.py  test_transport.py  test_vllm_validation.py  test_web_api.py  test_web_ui_static.py  test_yoloe_raw_tensor_tools.py
vrs/: __init__.py  contracts.py  pipeline.py  schemas.py  storage.py  transport.py
vrs/api/: __init__.py  api.py  artifacts.py
vrs/audit/: __init__.py  __main__.py  signing.py
vrs/calibration/: __init__.py  applier.py  calibrator.py  schemas.py  sink.py  suggester.py
vrs/control/: __init__.py  registry.py  static_assignment.py
vrs/deepstream/: __init__.py  adapter.py  jsonl_bridge.py  worker.py
vrs/eval/: __init__.py  ci.py  detection_export.py  detector_parity.py  harness.py  metrics.py  report.py  schemas.py
vrs/eval/datasets/: __init__.py  base.py  dfire.py  labeled_dir.py  le2i.py  ucf_crime.py
vrs/ingest/: __init__.py  stream_reader.py
vrs/multistream/: __init__.py  incidents.py  pipeline.py  queues.py  readers.py  workers.py
vrs/observability/: __init__.py  metrics.py
vrs/policy/: __init__.py  hot_reload.py  loader.py  prompt_renderer.py  router.py  schema.py  watch_policy.py
vrs/privacy/: __init__.py  blur.py  detectors.py  yunet.py
vrs/runtime/: __init__.py  backends.py  cosmos_loader.py  openai_compatible_vlm.py  trtllm_vlm.py  vllm_cosmos.py
vrs/sinks/: __init__.py  jsonl_sink.py  manifest_sink.py  thumbnail_sink.py  video_annotator.py
vrs/storage/: __init__.py
vrs/triage/: __init__.py  backends.py  event_state.py  tensorrt_detector.py  tracking.py  yoloe_detector.py
vrs/verifier/: __init__.py  alert_verifier.py  constrained.py  prompts.py
vrs/web/: __init__.py  api.py  artifacts.py
web/: README.md  app.js  config.js  index.html  sample_alerts.jsonl
