[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vrs"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "ultralytics>=8.3.0",
    "transformers>=4.46",
    "accelerate>=0.34",
    "safetensors>=0.4",
    "qwen-vl-utils>=0.0.10",
    "av>=12.0",
]

[project.optional-dependencies]
quant = ["bitsandbytes>=0.43"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["vrs*"]
