[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vrs"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "ultralytics>=8.3.0",
    "transformers>=4.46",
    "accelerate>=0.34",
    "safetensors>=0.4",
    "qwen-vl-utils>=0.0.10",
    "av>=12.0",
]

[project.optional-dependencies]
quant = ["bitsandbytes>=0.43"]
constrained = ["xgrammar>=0.1"]
vllm = ["vllm>=0.6.5"]
cu128 = ["torch>=2.6"]
cu121 = ["torch==2.5.1+cu121"]

[tool.setuptools.packages.find]
include = ["vrs*"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=7",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["dist", "runs", ".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in argument defaults (common in CLI/dataclass patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow `assert False` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
source = ["vrs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.codespell]
skip = "uv.lock,dist,runs,.venv,*.svg,*.lock"
ignore-words-list = "nd,smoot,thirdparty"

[tool.uv]
conflicts = [
    [
        { extra = "cu128" },
        { extra = "cu121" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
